Table AllAuthUser {
  id integer  [primary key, not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
}

Table UserProfile {
  id integer  [primary key, not null]
  user integer [not null, ref: > AllAuthUser.id]
  profile_picture image
  voted_posts integer[] [ref: <> CheaterPost.id]
  reputation integer [not null]
  created_on datetime [not null]
}

Enum HackType {
  aimbot
  esp
  wallhack
  speedhack
  noclip
  other
}

Table CheaterPost {
  id integer  [primary key, not null]
  author integer [not null, ref: > AllAuthUser.id]
  title varchar [not null]
  suspect_username varchar [not null]
  game_name varchar [not null]
  youtube_url varchar [not null]
  suspected_hack_types HackType[] [not null]
  description varchar [not null]
  score int [not null]
  created_on datetime [not null]
}

Table PostComment {
  id integer  [primary key, not null]
  author integer [not null, ref: > AllAuthUser.id]
  post integer [not null, ref: > CheaterPost.id]
  body varchar [not null]
  created_on datetime [not null]
}

Enum VoteChoices {
  up
  down
}

Table Vote {
  id integer  [primary key, not null]
  user integer [not null, ref: > AllAuthUser.id]
  post integer [not null, ref: > CheaterPost.id]
  vote_type VoteType [not null]
  created_on datetime [not null]
}

Table NewsPost {
  id integer  [primary key, not null]
  author integer [not null, ref: > AllAuthUser.id]
  title varchar [not null]
  featured_image image
  content varchar [not null]
  created_on datetime [not null]
  updated_on datetime [not null]
  status integer
  excerpt varchar [not null]
}
